--- a/poster/poster.html
+++ b/poster/poster.html
@@ -80,25 +80,25 @@
 <body>
     <div class="container">
         <img src="365_days1.jpg"
-         alt="Prince 1"
+         alt="Mansi 1"
           height="300px"
            width="300px"
             class="image1"
             >
         <img src="poster_2.webp"
-         alt="Prince 2"
+         alt="Mansi 2"
           height="300px"
            width="300px"
             class="image2"
             >
         <img src="poster_3.jpg"
-         alt="Prince 3"
+         alt="Mansi 3"
           height="300px"
            width="300px"
             class="image3"
             >
         <img src="poster_4.jpg"
-         alt="Prince 4" 
+         alt="Mansi 4" 
          height="300px"
           width="300px" 
           class="image4"
