--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h6>This is my first heading</h6>
     <a href="https://www.google.com">Click here</a>
     <ul>
-        <li>Maggie</li>
-        <li>Pasta</li>
-        <li>Pizza</li>
+        <li>Dal Makhni</li>
+        <li>Samosa</li>
+        <li>Chaat</li>
     </ul>
         <table>
             <tr>
@@ -26,40 +26,40 @@
                 <td>MANSI KUMARI</td>
             </tr>
             <td>22BCON513</td>
-            <td>RUPALI TANWAR</td>
+            <td>MISHTI</td>
             <tr>
                 <td>23BCON1917</td>
-                <td>MAYANK KUMAR</td>
+                <td>PRIYANSH SINGH</td>
 
 
             </tr>
             <tr>
                 <td>22BCOL1917</td>
-                <td>ANSHU PRIYA THAKUR</td>
+                <td>PAPA JI</td>
             </tr>
             <tr>
                 <td>22BCON601</td>
-                <td>PALAK SAHU</td>
+                <td>PRERANA MEHTA</td>
             </tr>
             <tr>
                 <td>22BCON542</td>
-                <td>DEEPAK NATH GOSWAMI</td>
+                <td>SWATEE GUPTA</td>
             </tr>
             <tr>
                 <td>22BCOL2016</td>
-                <td>Simran Sharma</td>
+                <td>JHILMIL</td>
             </tr>
             <tr>
                 <td>22BCON544</td>
-                <td>RITESH SINGH PARMAR</td>
+                <td>SHRISHTI</td>
             </tr>
             <tr>
                 <td>22BCON579</td>
-                <td>DUSHYANT SHARMA</td>
+                <td>PRATISHTHA</td>
             </tr>
             <tr>
-                <td>22BCON597</td>
-                <td>RAGHVENDRA SHARMA</td>
+                <td>22BCON1203</td>
+                <td>KINJAL</td>
             </tr>
 
 
