--- a/quest_ans.html
+++ b/quest_ans.html
@@ -18,11 +18,11 @@
     </details>
     <details>
         <summary>Where are you going?</summary>
-        <p>I am going to eat</p>
+        <p>I am editing</p>
     </details>
     <details>
-        <summary>What happaned to P1?</summary>
-        <p>He became a womanizer</p>
+        <summary>What happaned to P1 and P3?</summary>
+        <p>They became womanizer</p>
     </details>
     <details>
         <summary>Where do you study?</summary>
